@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Plataforma {
  -String designacao
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada

}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class Categoria {
  -String id
  -String descricao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
}


class CaraterCT {
  -Boolean obrigatoria
}

class Tarefa {
  -String referencia
  -String designacao
  -String descInformal
  -String descTecnica
  -Integer duracaoEst
  -Double custoEst
}

class Freelancer {

}

class Administrativo {

}

class Utilizador {
  -String nome
  -String email
  -String password
}

Plataforma "1" -- "*" AreaAtividade : possui >
Plataforma "1" -- "*" CompetenciaTecnica : possui >
Plataforma "1" -- "*" Organizacao : tem registadas >
Plataforma "1" -- "*" Freelancer : tem/usa  >
Plataforma "1" -- "*" Administrativo : tem  >
Plataforma "1" -- "*" Categoria : possui >

Organizacao "1" -- "1..*" Colaborador: tem >
Organizacao "1" -- "1" Colaborador: tem gestor >
Organizacao "1" -- "1" EnderecoPostal: localizada em >
Organizacao "1" -- "*" Tarefa: possui >

CompetenciaTecnica "*" -- "1" AreaAtividade : referente a >

Categoria "1" -- "1" AreaAtividade: enquadra-se em >
Categoria "1" -- "*" CaraterCT : tem >
CaraterCT "*" -- "1" CompetenciaTecnica : referente a >

Tarefa "*" -- "1" Categoria: enquadra-se em >
Tarefa "*" -- "1" Colaborador: especificada por >

Freelancer "0..1" -- "1" Utilizador: atua como >
Administrativo "0..1" -- "1" Utilizador: atua como >
Colaborador "0..1" -- "1" Utilizador: atua como >

@enduml
